@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: binary.test,v 1.37 2008/09/10 13:50:04 dkf Exp $
+# RCS: @(#) $Id: binary.test,v 1.38 2008/12/15 17:11:34 ferrieux Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -2718,6 +2718,14 @@ test binary-75.23 {binary decode uuencode} -body {
     set r [binary decode uuencode 86)C]
     list [string length $r] $r
 } -result {3 abc}
+test binary-75.24 {binary decode uuencode} -body {
+    set s "04)\# "
+    binary decode uuencode $s
+} -result ABC
+test binary-75.25 {binary decode uuencode} -body {
+    set s "04)\#z"
+    binary decode uuencode $s
+} -returnCodes error -match glob -result {invalid uuencode character "z" at position 4}
 
 test binary-76.1 {byte array concat speed} -body {
     set b1 [binary format H* [string repeat E9 1000000]]
